--- a/gitlab-ci/maven/lib.yml
+++ b/gitlab-ci/maven/lib.yml
@@ -1,25 +1,7 @@
 # A pre-defined pipline for maven lib project.
 
-test:
-  extends: .check
-  script:
-    - mvn test jacoco:report
-    # print coverage report for pipeline
-    - cat target/site/jacoco/index.html
-  artifacts:
-    when: on_success
-    paths:
-      - target/site/jacoco/
-
-pages:      
-  extends: .coverage
-  dependencies:
-    - test
-  script:
-    - mv target/site/jacoco/ public/
-
-publish:
+build_jar:
   extends: .merged
   stage: deploy
   script:
-    - mvn deploy
+    - mvn ${OPTS} package deploy
