Enable rest provider.

--- a/gitlab/delivery_group/it/docker-compose.yml
+++ b/gitlab/delivery_group/it/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     command: 
       - --entrypoints=Name:http Address::80
       - --entrypoints=Name:traefik Address::8080 Auth.Basic.Users:${BASIC}
+      - --rest
       - --api
       - --docker
       - --docker.watch
