Run check job only on master.

--- a/gitlab/delivery_group/it/.gitlab-ci.yml
+++ b/gitlab/delivery_group/it/.gitlab-ci.yml
@@ -16,7 +16,7 @@ check:
     - docker-compose config
   only:
     - merge_requests
-    - branches
+    - master
   except:
     variables:
       - $CMD
