--- a/gitlab/cicd/includes/maven/docker.yml
+++ b/gitlab/cicd/includes/maven/docker.yml
@@ -12,9 +12,9 @@ build_image:
     - echo ${OPTS}
     - >- 
       mvn ${OPTS} 
-      -Ddockerfile.repository=${HUB}/snapshot/${CI_PROJECT_PATH} 
-      -Ddockerfile.tag=latest
-      package dockerfile:push 
+        -Ddockerfile.repository=${HUB}/snapshot/${CI_PROJECT_PATH} 
+        -Ddockerfile.tag=latest
+        package dockerfile:push 
 
 deploy_it:
   extends: .merged
@@ -24,8 +24,8 @@ deploy_it:
     - test -n "${IT_PROJECT_ID}"
   script:
     - >-
-      curl -X POST \
-           -F token=${TRIGGER_DEPLOY_TOKEN} \
-           -F ref=master \
+      curl -X POST 
+           -F token=${TRIGGER_DEPLOY_TOKEN} 
+           -F ref=master 
            ${CI_API_V4_URL}/projects/${IT_PROJECT_ID}/trigger/pipeline
 
